--- a/src/Standart.Hash.xxHash/Standart.Hash.xxHash.csproj
+++ b/src/Standart.Hash.xxHash/Standart.Hash.xxHash.csproj
@@ -14,8 +14,8 @@
   <ItemGroup>
     <PackageReference Include="System.Buffers" Version="$(SystemBuffers)" />
 	<PackageReference Include="System.IO" Version="$(SystemIO)" />
-    <PackageReference Include="System.Memory" Version="$(SystemMemory)" />
-	<PackageReference Include="System.Threading.Tasks.Extensions" Version="$(SystemTasks)" />
+    <PackageReference Include="System.Memory" Version="4.5.3" />
+	<PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.3" />
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
