--- a/src/Standart.Hash.xxHash/Standart.Hash.xxHash.csproj
+++ b/src/Standart.Hash.xxHash/Standart.Hash.xxHash.csproj
@@ -12,6 +12,10 @@
     <DebugType>full</DebugType>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.8">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="System.Buffers" Version="$(SystemBuffers)" />
 	<PackageReference Include="System.IO" Version="$(SystemIO)" />
     <PackageReference Include="System.Memory" Version="4.5.3" />
@@ -19,5 +23,7 @@
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <RunAnalyzersDuringBuild>false</RunAnalyzersDuringBuild>
+    <RunAnalyzersDuringLiveAnalysis>false</RunAnalyzersDuringLiveAnalysis>
   </PropertyGroup>
 </Project>
